@@ -2166,7 +2166,7 @@ m4trace:configure.in:3: -1- m4_pattern_allow([^LIBS$])
 m4trace:configure.in:3: -1- m4_pattern_allow([^build_alias$])
 m4trace:configure.in:3: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.in:3: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.in:5: -1- AM_INIT_AUTOMAKE([logger], [0.0.0-5])
+m4trace:configure.in:5: -1- AM_INIT_AUTOMAKE([logger], [0.0.0-6])
 m4trace:configure.in:5: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.in:5: -1- AM_SET_CURRENT_AUTOMAKE_VERSION
 m4trace:configure.in:5: -1- AM_AUTOMAKE_VERSION([1.11.1])
