@@ -147,7 +147,7 @@ m4trace:configure.in:3: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.in:3: -1- AC_SUBST([target_alias])
 m4trace:configure.in:3: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.in:3: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.in:5: -1- AM_INIT_AUTOMAKE([logger], [0.0.0-5])
+m4trace:configure.in:5: -1- AM_INIT_AUTOMAKE([logger], [0.0.0-6])
 m4trace:configure.in:5: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.in:5: -1- AM_AUTOMAKE_VERSION([1.11.1])
 m4trace:configure.in:5: -1- AC_REQUIRE_AUX_FILE([install-sh])
@@ -170,7 +170,7 @@ m4trace:configure.in:5: -1- m4_pattern_allow([^CYGPATH_W$])
 m4trace:configure.in:5: -1- AC_SUBST([PACKAGE], [logger])
 m4trace:configure.in:5: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.in:5: -1- m4_pattern_allow([^PACKAGE$])
-m4trace:configure.in:5: -1- AC_SUBST([VERSION], [0.0.0-5])
+m4trace:configure.in:5: -1- AC_SUBST([VERSION], [0.0.0-6])
 m4trace:configure.in:5: -1- AC_SUBST_TRACE([VERSION])
 m4trace:configure.in:5: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.in:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
@@ -703,7 +703,7 @@ m4trace:configure.in:64: -1- AC_CONFIG_FILES([			\
   src/Makefile 	       		\
   src/tools/Makefile   		\
   src/examples/Makefile		\
-  logger.lsm logger.spec])
+  logger.lsm logger.spec rainbrurpg-logger.pc])
 m4trace:configure.in:64: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
 m4trace:configure.in:64: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
