@@ -1,3 +1,11 @@
+* v0.0.0-5 (09 dec 2011 - 07 jan 2012) SLOC 1,053 FT 13:47
+- Generate and install pkg-config file
+- Change the Tty output colors to fix gray message issue
+- Update GNU headers date for 2012
+- ../next_release.rb handles -h/--help and documentation
+- ../next_release.rb implemented
+- Added important warning in ../stats.pl
+
 * v0.0.0-4 (22 nov 2011 - 09 dec 2011) SLOC 955 FT 9:31
 - LoggerOutputYaml escape string values with double quote
 - example yaml can be read with log_reader if some chars escaped
