@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(logger.cc)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(logger, 0.0.0-5)
+AM_INIT_AUTOMAKE(logger, 0.0.0-6)
 
 dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
@@ -66,7 +66,7 @@ AC_OUTPUT([			\
   src/Makefile 	       		\
   src/tools/Makefile   		\
   src/examples/Makefile		\
-  logger.lsm logger.spec])
+  logger.lsm logger.spec rainbrurpg-logger.pc])
 
 echo
 echo "------------------------------------------------------------------------"
