@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: RainbruRPG logger
+Description: The RainbruRPG's stream-oriented multi-output logging library
+Version: @VERSION@
+Libs: -L${libdir} -lrainbrurpg-@PACKAGE@
+Cflags: -I${includedir}/rainbrurpg/@PACKAGE@
